.antlr/pascalscript_parserParser.java
// Generated from /workspaces/pascalscript/pascalscript_parser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class pascalscript_parserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, PROGRAM=2, BEGIN=3, END=4, IF=5, THEN=6, ELSE=7, REPEAT=8, UNTIL=9, 
		WHILE=10, DO=11, FOR=12, TO=13, DOWNTO=14, WRITE=15, WRITELN=16, FALSE=17, 
		TRUE=18, LABEL=19, GOTO=20, INTEGER=21, CARDINAL=22, BOOLEAN=23, CHAR=24, 
		STRING=25, REAL=26, ARRAY=27, OF=28, RECORD=29, CONST=30, TYPE=31, VAR=32, 
		PROCEDURE=33, FUNCTION=34, NOT=35, OR=36, XOR=37, DIV=38, MOD=39, AND=40, 
		SHL=41, SHR=42, PLUS=43, MINUS=44, STAR=45, SLASH=46, EQUAL=47, NOT_EQUAL=48, 
		LESS_THAN=49, LESS_OR_EQUAL=50, GREATER_THAN=51, GREATER_OR_EQUAL=52, 
		DOT_COLON=53, AT_SIGN=54, CARET=55, COLON=56, COMMA=57, DOT_DOT=58, DOT=59, 
		LEFT_BRACKET=60, LEFT_PARENTHESIS=61, RIGHT_BRACKET=62, RIGHT_PARENTHESIS=63, 
		SEMI_COLON=64, UNDERSCORE=65, QUOTE=66, PERCENT=67, AMPERSAND=68, DOLLAR=69, 
		IDENTIFIER=70, IDENTIFIER_PREFIX=71, LETTER=72, UNSIGNED_INTEGER_VALUE=73, 
		UNSIGNED_REAL_VALUE=74, DECIMAL_DIGIT_SEQUENCE=75, BINARY_DIGIT_SEQUENCE=76, 
		OCTAL_DIGIT_SEQUENCE=77, HEXADECIMAL_DIGIT_SEQUENCE=78, SIGN=79, DECIMAL_DIGIT=80, 
		BINARY_DIGIT=81, OCTAL_DIGIT=82, HEXADECIMAL_DIGIT=83, CHARACTER_VALUE=84, 
		COMPOSED_STRING_VALUE=85, CHAR_VALUE=86, CONTROL_CHAR=87, QUOTED_CHAR=88, 
		QUOTED_STRING=89, BOOLEAN_VALUE=90, ANY_CHAR=91, COMMENT1=92, COMMENT2=93, 
		COMMENT3=94;
	public static final int
		RULE_pascalFile = 0, RULE_pascalProgram = 1, RULE_pascalHeader = 2, RULE_pascalBlock = 3, 
		RULE_instructionBlock = 4, RULE_instruction = 5, RULE_assignment = 6, 
		RULE_procedureCall = 7, RULE_parameterList = 8, RULE_parameter = 9, RULE_constBlock = 10, 
		RULE_constantDeclaration = 11, RULE_typeReference = 12, RULE_scalarType = 13, 
		RULE_varBlock = 14, RULE_variableDeclaration = 15, RULE_identifierList = 16, 
		RULE_expression = 17, RULE_unaryOperator = 18, RULE_relationalOperator = 19, 
		RULE_additiveOperator = 20, RULE_multiplicativeOperator = 21, RULE_variableReference = 22, 
		RULE_constantReference = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"pascalFile", "pascalProgram", "pascalHeader", "pascalBlock", "instructionBlock", 
			"instruction", "assignment", "procedureCall", "parameterList", "parameter", 
			"constBlock", "constantDeclaration", "typeReference", "scalarType", "varBlock", 
			"variableDeclaration", "identifierList", "expression", "unaryOperator", 
			"relationalOperator", "additiveOperator", "multiplicativeOperator", "variableReference", 
			"constantReference"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'PROGRAM'", "'BEGIN'", "'END'", "'IF'", "'THEN'", "'ELSE'", 
			"'REPEAT'", "'UNTIL'", "'WHILE'", "'DO'", "'FOR'", "'TO'", "'DOWNTO'", 
			"'WRITE'", "'WRITELN'", "'FALSE'", "'TRUE'", "'LABEL'", "'GOTO'", "'INTEGER'", 
			"'CARDINAL'", "'BOOLEAN'", "'CHAR'", "'STRING'", "'REAL'", "'ARRAY'", 
			"'OF'", "'RECORD'", "'CONST'", "'TYPE'", "'VAR'", "'PROCEDURE'", "'FUNCTION'", 
			"'NOT'", "'OR'", "'XOR'", "'DIV'", "'MOD'", "'AND'", "'SHL'", "'SHR'", 
			"'+'", "'-'", "'*'", "'/'", "'='", "'<>'", "'<'", "'<='", "'>'", "'>='", 
			"':='", "'@'", "'^'", "':'", "','", "'..'", "'.'", "'['", "'('", "']'", 
			"')'", "';'", "'_'", "'''", "'%'", "'&'", "'$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "PROGRAM", "BEGIN", "END", "IF", "THEN", "ELSE", "REPEAT", 
			"UNTIL", "WHILE", "DO", "FOR", "TO", "DOWNTO", "WRITE", "WRITELN", "FALSE", 
			"TRUE", "LABEL", "GOTO", "INTEGER", "CARDINAL", "BOOLEAN", "CHAR", "STRING", 
			"REAL", "ARRAY", "OF", "RECORD", "CONST", "TYPE", "VAR", "PROCEDURE", 
			"FUNCTION", "NOT", "OR", "XOR", "DIV", "MOD", "AND", "SHL", "SHR", "PLUS", 
			"MINUS", "STAR", "SLASH", "EQUAL", "NOT_EQUAL", "LESS_THAN", "LESS_OR_EQUAL", 
			"GREATER_THAN", "GREATER_OR_EQUAL", "DOT_COLON", "AT_SIGN", "CARET", 
			"COLON", "COMMA", "DOT_DOT", "DOT", "LEFT_BRACKET", "LEFT_PARENTHESIS", 
			"RIGHT_BRACKET", "RIGHT_PARENTHESIS", "SEMI_COLON", "UNDERSCORE", "QUOTE", 
			"PERCENT", "AMPERSAND", "DOLLAR", "IDENTIFIER", "IDENTIFIER_PREFIX", 
			"LETTER", "UNSIGNED_INTEGER_VALUE", "UNSIGNED_REAL_VALUE", "DECIMAL_DIGIT_SEQUENCE", 
			"BINARY_DIGIT_SEQUENCE", "OCTAL_DIGIT_SEQUENCE", "HEXADECIMAL_DIGIT_SEQUENCE", 
			"SIGN", "DECIMAL_DIGIT", "BINARY_DIGIT", "OCTAL_DIGIT", "HEXADECIMAL_DIGIT", 
			"CHARACTER_VALUE", "COMPOSED_STRING_VALUE", "CHAR_VALUE", "CONTROL_CHAR", 
			"QUOTED_CHAR", "QUOTED_STRING", "BOOLEAN_VALUE", "ANY_CHAR", "COMMENT1", 
			"COMMENT2", "COMMENT3"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pascalscript_parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pascalscript_parserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PascalFileContext extends ParserRuleContext {
		public PascalProgramContext pascalProgram() {
			return getRuleContext(PascalProgramContext.class,0);
		}
		public PascalFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pascalFile; }
	}

	public final PascalFileContext pascalFile() throws RecognitionException {
		PascalFileContext _localctx = new PascalFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pascalFile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			pascalProgram();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PascalProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(pascalscript_parserParser.PROGRAM, 0); }
		public TerminalNode IDENTIFIER() { return getToken(pascalscript_parserParser.IDENTIFIER, 0); }
		public TerminalNode SEMI_COLON() { return getToken(pascalscript_parserParser.SEMI_COLON, 0); }
		public PascalHeaderContext pascalHeader() {
			return getRuleContext(PascalHeaderContext.class,0);
		}
		public InstructionBlockContext instructionBlock() {
			return getRuleContext(InstructionBlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(pascalscript_parserParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(pascalscript_parserParser.EOF, 0); }
		public PascalProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pascalProgram; }
	}

	public final PascalProgramContext pascalProgram() throws RecognitionException {
		PascalProgramContext _localctx = new PascalProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pascalProgram);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(PROGRAM);
			setState(51);
			match(IDENTIFIER);
			setState(52);
			match(SEMI_COLON);
			setState(53);
			pascalHeader();
			setState(54);
			instructionBlock();
			setState(55);
			match(DOT);
			setState(56);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PascalHeaderContext extends ParserRuleContext {
		public List<PascalBlockContext> pascalBlock() {
			return getRuleContexts(PascalBlockContext.class);
		}
		public PascalBlockContext pascalBlock(int i) {
			return getRuleContext(PascalBlockContext.class,i);
		}
		public PascalHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pascalHeader; }
	}

	public final PascalHeaderContext pascalHeader() throws RecognitionException {
		PascalHeaderContext _localctx = new PascalHeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pascalHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CONST || _la==VAR) {
				{
				{
				setState(58);
				pascalBlock();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PascalBlockContext extends ParserRuleContext {
		public ConstBlockContext constBlock() {
			return getRuleContext(ConstBlockContext.class,0);
		}
		public VarBlockContext varBlock() {
			return getRuleContext(VarBlockContext.class,0);
		}
		public PascalBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pascalBlock; }
	}

	public final PascalBlockContext pascalBlock() throws RecognitionException {
		PascalBlockContext _localctx = new PascalBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pascalBlock);
		try {
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONST:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				constBlock();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				varBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionBlockContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(pascalscript_parserParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(pascalscript_parserParser.END, 0); }
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public InstructionBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructionBlock; }
	}

	public final InstructionBlockContext instructionBlock() throws RecognitionException {
		InstructionBlockContext _localctx = new InstructionBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_instructionBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(BEGIN);
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 15)) & ~0x3f) == 0 && ((1L << (_la - 15)) & 36028797018963971L) != 0)) {
				{
				{
				setState(69);
				instruction();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ProcedureCallContext procedureCall() {
			return getRuleContext(ProcedureCallContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_instruction);
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				assignment();
				}
				break;
			case WRITE:
			case WRITELN:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				procedureCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public VariableReferenceContext variableReference() {
			return getRuleContext(VariableReferenceContext.class,0);
		}
		public TerminalNode DOT_COLON() { return getToken(pascalscript_parserParser.DOT_COLON, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI_COLON() { return getToken(pascalscript_parserParser.SEMI_COLON, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			variableReference();
			setState(82);
			match(DOT_COLON);
			setState(83);
			expression(0);
			setState(84);
			match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedureCallContext extends ParserRuleContext {
		public TerminalNode SEMI_COLON() { return getToken(pascalscript_parserParser.SEMI_COLON, 0); }
		public TerminalNode WRITE() { return getToken(pascalscript_parserParser.WRITE, 0); }
		public TerminalNode WRITELN() { return getToken(pascalscript_parserParser.WRITELN, 0); }
		public TerminalNode LEFT_PARENTHESIS() { return getToken(pascalscript_parserParser.LEFT_PARENTHESIS, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode RIGHT_PARENTHESIS() { return getToken(pascalscript_parserParser.RIGHT_PARENTHESIS, 0); }
		public ProcedureCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureCall; }
	}

	public final ProcedureCallContext procedureCall() throws RecognitionException {
		ProcedureCallContext _localctx = new ProcedureCallContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_procedureCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_la = _input.LA(1);
			if ( !(_la==WRITE || _la==WRITELN) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LEFT_PARENTHESIS) {
				{
				setState(87);
				match(LEFT_PARENTHESIS);
				setState(88);
				parameterList();
				setState(89);
				match(RIGHT_PARENTHESIS);
				}
			}

			setState(93);
			match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterListContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(pascalscript_parserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(pascalscript_parserParser.COMMA, i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			parameter();
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(96);
				match(COMMA);
				setState(97);
				parameter();
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VariableReferenceContext variableReference() {
			return getRuleContext(VariableReferenceContext.class,0);
		}
		public ConstantReferenceContext constantReference() {
			return getRuleContext(ConstantReferenceContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parameter);
		try {
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				expression(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				variableReference();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				constantReference();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstBlockContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(pascalscript_parserParser.CONST, 0); }
		public List<ConstantDeclarationContext> constantDeclaration() {
			return getRuleContexts(ConstantDeclarationContext.class);
		}
		public ConstantDeclarationContext constantDeclaration(int i) {
			return getRuleContext(ConstantDeclarationContext.class,i);
		}
		public ConstBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constBlock; }
	}

	public final ConstBlockContext constBlock() throws RecognitionException {
		ConstBlockContext _localctx = new ConstBlockContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_constBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(CONST);
			setState(110); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(109);
				constantDeclaration();
				}
				}
				setState(112); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstantDeclarationContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(pascalscript_parserParser.IDENTIFIER, 0); }
		public TerminalNode EQUAL() { return getToken(pascalscript_parserParser.EQUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI_COLON() { return getToken(pascalscript_parserParser.SEMI_COLON, 0); }
		public ConstantDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDeclaration; }
	}

	public final ConstantDeclarationContext constantDeclaration() throws RecognitionException {
		ConstantDeclarationContext _localctx = new ConstantDeclarationContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_constantDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(IDENTIFIER);
			setState(115);
			match(EQUAL);
			setState(116);
			expression(0);
			setState(117);
			match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
